--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.3.2",
     "gsap": "^3.10.2",
+    "nanoid": "^4.0.0",
     "react": "^18.0.0",
     "react-curtains": "^1.0.10",
     "react-dom": "^18.0.0",
@@ -24,7 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
-    "swiper": "^8.1.4",
+    "swiper": "^6.8.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
