--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0",
     "react-curtains": "^1.0.10",
     "react-dom": "^18.0.0",
+    "react-image-lightbox": "^5.1.4",
     "react-locomotive-scroll": "^0.2.0",
     "react-lottie": "^1.2.3",
     "react-marquee-slider": "^1.1.5",
