--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-curtains": "^1.0.10",
     "react-dom": "^18.0.0",
     "react-image-lightbox": "^5.1.4",
+    "react-intersection-observer": "^9.4.0",
     "react-locomotive-scroll": "^0.2.0",
     "react-lottie": "^1.2.3",
     "react-marquee-slider": "^1.1.5",
